# meetingnoter

./: ARCHITECT_CRITIC_REVIEW.md  README.md  colab_runner.ipynb  fix_dups.py  fix_dups2.py  fix_path_inj.py  main.py  patch_aliases.py  patch_domain_imports.py  patch_imports.py  patch_main.py  patch_more_aliases.py  pyproject.toml  rm_duplicates.py
dev_documents/: USER_TEST_SCENARIO.md  run_cycle05_test.py  run_test.py  test_execution_log.txt
dev_documents/system_prompts/: SYSTEM_ARCHITECTURE.md
dev_documents/system_prompts/CYCLE01/: SPEC.md
dev_documents/system_prompts/CYCLE02/: SPEC.md
dev_documents/system_prompts/CYCLE03/: UAT.md
dev_documents/system_prompts/CYCLE04/: SPEC.md
dev_documents/system_prompts/CYCLE06/: SPEC.md
dev_documents/system_prompts_phase01/: ALL_SPEC.md  SYSTEM_ARCHITECTURE.md  USER_TEST_SCENARIO.md  project_state.json
dev_documents/system_prompts_phase01/CYCLE01/: UAT.md
dev_documents/system_prompts_phase01/CYCLE02/: UAT.md
dev_documents/system_prompts_phase01/CYCLE03/: SPEC.md
dev_documents/system_prompts_phase01/CYCLE04/: UAT.md
dev_documents/system_prompts_phase01/CYCLE05/: SPEC.md  UAT.md
dev_documents/system_prompts_phase01/CYCLE06/: UAT.md
src/domain_models/: __init__.py  audio.py  config.py  credentials.py  interfaces.py  transcription.py
src/meetingnoter/: __init__.py  factory.py  pipeline.py
tests/e2e/: test_integration_01.py
tests/uat/: UAT_AND_TUTORIAL.py
tests/unit/: test_chunker.py  test_cycle_05.py  test_domain_models.py  test_enhancements.py  test_vad.py
tutorials/: UAT_AND_TUTORIAL.py
(+13 files in other folders)
